@@ -1,3 +1,7 @@
+News in 43.0, 2022-09-20
+------------------------
+* Translation updates
+
 News in 43.rc, 2022-09-03
 -------------------------
 * Use Meson's gnome.post_install() [!49]
